--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="author" content="Anthony Fu" />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="revisit-after" content="7 days" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
-    <link rel="alternate" type="application/rss+xml" title="Anthony Fu's Blog" href="/feed.xml" />
+    <link rel="icon" href="/favicon.ico"  />
+    <link rel="alternate" type="application/rss+xml" title="Chen YuBo's Blog" href="/feed.xml" />
     <meta name="msapplication-TileColor" content="#ffffff" />
-    <title>Anthony Fu</title>
+    <title>Chen Yubo</title>
     <script>
       (function () {
         const prefersDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches
